--- a/notebooks/said/EDSR.ipynb
+++ b/notebooks/said/EDSR.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9360a44c",
    "metadata": {},
    "outputs": [
@@ -138,7 +138,7 @@
     "\n",
     "best_psnr = 0.0\n",
     "best_model_path = CONFIG[\"model\"][\"best_EDSR_path\"]\n",
-    "history_path = CONFIG[\"model\"][\"history_path\"]\n",
+    "history_path = CONFIG[\"history\"][\"EDSR_history_path\"]\n",
     "os.makedirs(os.path.dirname(best_model_path), exist_ok=True)\n",
     "os.makedirs(os.path.dirname(history_path), exist_ok=True)\n",
     "\n",
