--- a/notebooks/said/EDSR.ipynb
+++ b/notebooks/said/EDSR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f079f3e0",
    "metadata": {},
    "outputs": [
@@ -41,7 +41,7 @@
     "from src.utils.config import CONFIG\n",
     "\n",
     "from src.utils.data_loader import create_loaders\n",
-    "from src.models.models_architecture import EDSR       \n",
+    "from src.utils.models_architecture import EDSR       \n",
     "from src.utils.helper_functions import train_sr, val_sr, plot_sr_progress\n",
     "\n",
     "import json\n",
