--- a/notebooks/said/test_MODELS.ipynb
+++ b/notebooks/said/test_MODELS.ipynb
@@ -116,7 +116,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "bf4048b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "\n",
+    "to_tensor = T.ToTensor()\n",
+    "\n",
+    "def psnr(sr, hr):\n",
+    "    mse = np.mean((sr - hr) ** 2)\n",
+    "    if mse == 0:\n",
+    "        return 100\n",
+    "    return 20 * np.log10(1.0 / np.sqrt(mse))\n",
+    "\n",
+    "\n",
+    "def compare_sr_models(\n",
+    "    hr_path,\n",
+    "    srcnn_model,\n",
+    "    edsr_model,\n",
+    "    scale=4\n",
+    "):\n",
+    "    srcnn_model.eval()\n",
+    "    edsr_model.eval()\n",
+    "\n",
+    "    # LOAD HR\n",
+    "    hr_img = Image.open(hr_path).convert(\"RGB\")\n",
+    "    hr_tensor = to_tensor(hr_img).unsqueeze(0).to(device)\n",
+    "\n",
+    "    # GENERATE LR SYNTHETIC\n",
+    "    lr_img = hr_img.resize(\n",
+    "        (hr_img.width // scale, hr_img.height // scale),\n",
+    "        Image.BICUBIC\n",
+    "    )\n",
+    "    lr_tensor = to_tensor(lr_img).unsqueeze(0).to(device)\n",
+    "\n",
+    "    # BICUBIC UPSCALE\n",
+    "    bicubic_tensor = F.interpolate(\n",
+    "        lr_tensor,\n",
+    "        scale_factor=scale,\n",
+    "        mode=\"bicubic\",\n",
+    "        align_corners=False\n",
+    "    )\n",
+    "\n",
+    "    # SRCNN\n",
+    "    with torch.no_grad():\n",
+    "        srcnn_sr = srcnn_model(bicubic_tensor)\n",
+    "\n",
+    "    # EDSR\n",
+    "    with torch.no_grad():\n",
+    "        edsr_sr = edsr_model(lr_tensor)\n",
+    "\n",
+    "    # TO NUMPY\n",
+    "    hr_np       = hr_tensor.squeeze(0).permute(1,2,0).cpu().numpy()\n",
+    "    bicubic_np  = bicubic_tensor.squeeze(0).permute(1,2,0).cpu().numpy()\n",
+    "    srcnn_np    = srcnn_sr.squeeze(0).permute(1,2,0).cpu().numpy()\n",
+    "    edsr_np     = edsr_sr.squeeze(0).permute(1,2,0).cpu().numpy()\n",
+    "    lr_np       = lr_tensor.squeeze(0).permute(1,2,0).cpu().numpy()\n",
+    "\n",
+    "    # PSNR\n",
+    "    psnr_bic  = psnr(bicubic_np, hr_np)\n",
+    "    psnr_src  = psnr(srcnn_np, hr_np)\n",
+    "    psnr_edsr = psnr(edsr_np, hr_np)\n",
+    "\n",
+    "    print(\" PSNR RESULTS (Synthetic LR)\")\n",
+    "    print(f\"  Bicubic : {psnr_bic:.2f} dB\")\n",
+    "    print(f\"  SRCNN   : {psnr_src:.2f} dB\")\n",
+    "    print(f\"  EDSR    : {psnr_edsr:.2f} dB\")\n",
+    "\n",
+    "    # DISPLAY\n",
+    "    titles = [\n",
+    "        \"LR (Synthetic)\",\n",
+    "        f\"Bicubic\\n{psnr_bic:.2f} dB\",\n",
+    "        f\"SRCNN\\n{psnr_src:.2f} dB\",\n",
+    "        f\"EDSR\\n{psnr_edsr:.2f} dB\",\n",
+    "        \"HR (Ground Truth)\"\n",
+    "    ]\n",
+    "\n",
+    "    images = [lr_np, bicubic_np, srcnn_np, edsr_np, hr_np]\n",
+    "\n",
+    "    plt.figure(figsize=(18, 6))\n",
+    "    for i, (img, title) in enumerate(zip(images, titles)):\n",
+    "        plt.subplot(1, 5, i + 1)\n",
+    "        plt.imshow(np.clip(img, 0, 1))\n",
+    "        plt.title(title)\n",
+    "        plt.axis(\"off\")\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f3e56f21",
    "metadata": {},
    "outputs": [
@@ -141,7 +234,7 @@
     }
    ],
    "source": [
-    "from src.models.models_architecture import SRCNN, EDSR\n",
+    "from src.utils.models_architecture import SRCNN, EDSR\n",
     "\n",
     "srcnn = SRCNN().to(device)\n",
     "srcnn.load_state_dict(\n",
