--- a/notebooks/yasser/overfit.ipynb
+++ b/notebooks/yasser/overfit.ipynb
@@ -7,8 +7,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "os.chdir(\"/home/yasser/classes/DL26/final_Project\")\n"
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "import os \n",
+    "os.chdir(\"/home/jadli/Bureau/BDAI2/Satellite_Super_Resulotion0\")"
    ]
   },
   {
@@ -33,7 +35,7 @@
     "import torch.nn.functional as F\n",
     "import matplotlib.pyplot as plt\n",
     "from src.utils.data_fetcher import create_loaders\n",
-    "from src.utils.models_architecture import SRResNet\n",
+    "from src.utils.models_architecture import EDSR\n",
     "from src.utils.helper_functions import train_sr, val_sr, plot_sr_progress\n",
     "import os\n",
     "import json\n",
@@ -44,12 +46,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "403a57c7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = SRResNet().to(device)\n",
+    "model = EDSR().to(device)\n",
     "criterion = nn.L1Loss()\n",
     "optimizer = torch.optim.Adam(\n",
     "    model.parameters(),\n",
@@ -303,7 +305,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DL",
+   "display_name": "BDAI2",
    "language": "python",
    "name": "python3"
   },
@@ -317,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
