--- a/notebooks/said/EDSR_PRO.ipynb
+++ b/notebooks/said/EDSR_PRO.ipynb
@@ -12,7 +12,7 @@
      "text": [
       "device : cuda\n",
       "\n",
-      "📦 DATA LOADED:\n",
+      " DATA LOADED:\n",
       "  Train: 64800 samples\n",
       "  Val:   8100 samples\n",
       "  Test:  8100 samples\n"
@@ -41,8 +41,9 @@
     "from src.utils.config import CONFIG\n",
     "\n",
     "from src.utils.data_loader import create_loaders\n",
-    "from src.models.models_architecture import SRCNN        \n",
-    "from src.utils.helper_functions import train_sr, test_sr, plot_sr_progress\n",
+    "# from src.utils.models_architecture import         \n",
+    "from src.utils.helper_functions import train_sr, val_sr, plot_sr_progress\n",
+    "from src.utils.train_model_sr import train_model_sr\n",
     "\n",
     "\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
@@ -50,14 +51,14 @@
     "\n",
     "# CONFIG FROM YAML \n",
     "data_root      = CONFIG[\"paths\"][\"output_root\"]\n",
-    "batch_size     = CONFIG[\"training\"][\"batch_size\"]\n",
+    "batch_size     = 1 #CONFIG[\"training\"][\"batch_size\"]\n",
     "num_workers    = CONFIG[\"training\"][\"num_workers\"]\n",
     "use_aug        = CONFIG[\"training\"].get(\"use_augmentation\", True)\n",
     "\n",
     "# HYPERPARAMS FROM CONFIG \n",
-    "lr              = CONFIG[\"training\"][\"lr\"]\n",
+    "lr              = 1e-4 #CONFIG[\"training\"][\"lr\"]\n",
     "weight_decay    = CONFIG[\"training\"][\"weight_decay\"]\n",
-    "num_epochs      = CONFIG[\"training\"][\"epochs\"]\n",
+    "num_epochs      = 1 # CONFIG[\"training\"][\"epochs\"]\n",
     "step_size       = CONFIG[\"training\"][\"scheduler_step_size\"]\n",
     "gamma           = CONFIG[\"training\"][\"scheduler_gamma\"]\n",
     "\n",
@@ -74,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "fd67b5cf",
    "metadata": {},
    "outputs": [],
@@ -144,131 +145,61 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f315098",
+   "id": "cf0ca4ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Training EDSR_PRO from scratch\n",
+      "No previous training history found.\n",
+      "\n",
+      " [EDSR_PRO] Epoch 1/1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:   1%|          | 361/64800 [00:50<2:28:42,  7.22it/s, loss=0.0342, psnr=25.4] "
+     ]
+    }
+   ],
    "source": [
-    "# === Hyperparams EDSR Pro ===\n",
-    "scale_factor = 4\n",
-    "num_blocks   = 32         # lourd : 32, tu peux tester 16 si OOM\n",
-    "channels     = 128        # 128 recommandé pour Pro\n",
-    "batch_size   = 4           # <= 8 sinon OOM probable\n",
-    "num_epochs   = 10\n",
-    "lr           = 1e-4\n",
+    "model = EDSRPro().to(device)\n",
     "\n",
+    "criterion = nn.L1Loss()\n",
+    "optimizer = optim.Adam(model.parameters(), lr=lr, weight_decay=weight_decay)\n",
+    "scheduler = optim.lr_scheduler.StepLR(optimizer, step_size=step_size, gamma=gamma)\n",
+    "best_model_path = CONFIG[\"model\"][\"best_EDSR_PRO_path\"]\n",
+    "history_path = CONFIG[\"history\"][\"EDSR_PRO_history_path\"]\n",
     "\n",
-    "\n",
-    "# === Model ===\n",
-    "model = EDSRPro(num_blocks=num_blocks, channels=channels, scale_factor=scale_factor).to(device)\n",
-    "\n",
-    "criterion  = nn.L1Loss()\n",
-    "optimizer  = optim.Adam(model.parameters(), lr=lr)\n",
-    "scheduler  = optim.lr_scheduler.StepLR(optimizer, step_size=20, gamma=0.5)\n",
-    "\n",
-    "train_losses, val_losses = [], []\n",
-    "train_psnrs,  val_psnrs  = [], []\n",
-    "best_psnr = 0.0\n",
-    "best_model_path = CONFIG[\"model\"][\"best_EDSR_path\"]\n",
-    "os.makedirs(os.path.dirname(best_model_path), exist_ok=True)\n",
-    "\n",
-    "scaler = None  # pour AMP\n",
-    "\n",
-    "for epoch in range(num_epochs):\n",
-    "    print(f\"\\nEpoch {epoch+1}/{num_epochs}\")\n",
-    "\n",
-    "    train_loss, train_psnr, scaler = train_sr(\n",
-    "        model=model,\n",
-    "        train_loader=train_loader,\n",
-    "        loss_fn=criterion,\n",
-    "        optimizer=optimizer,\n",
-    "        device=device,\n",
-    "        scale_factor=scale_factor,\n",
-    "        model_requires_upscale=False,   # IMPORTANT pour EDSRPro\n",
-    "        scheduler=scheduler,\n",
-    "        use_amp=True,\n",
-    "        scaler=scaler\n",
-    "    )\n",
-    "\n",
-    "    val_loss, val_psnr = test_sr(\n",
-    "        model=model,\n",
-    "        test_loader=val_loader,\n",
-    "        loss_fn=criterion,\n",
-    "        device=device,\n",
-    "        scale_factor=scale_factor,\n",
-    "        model_requires_upscale=False\n",
-    "    )\n",
-    "\n",
-    "    # if val_psnr > best_psnr:\n",
-    "    #     best_psnr = val_psnr\n",
-    "    #     torch.save(model.state_dict(), best_model_path)\n",
-    "    #     print(f\" New best model saved with Val PSNR = {best_psnr:.2f} dB\")\n",
-    "\n",
-    "    train_losses.append(train_loss)\n",
-    "    val_losses.append(val_loss)\n",
-    "    train_psnrs.append(train_psnr)\n",
-    "    val_psnrs.append(val_psnr)\n",
-    "\n",
-    "    print(f\"Train loss: {train_loss:.6f} | Train PSNR: {train_psnr:.2f} dB\")\n",
-    "    print(f\"Val   loss: {val_loss:.6f} | Val   PSNR: {val_psnr:.2f} dB\")\n",
-    "    print(f\"  ➤ LR: {optimizer.param_groups[0]['lr']:.8f}\")\n",
-    "\n",
-    "plot_sr_progress(train_losses, val_losses, train_psnrs, val_psnrs)\n"
+    "train_model_sr(\n",
+    "    model=model,\n",
+    "    model_name=\"EDSR_PRO\",\n",
+    "    train_loader=train_loader,\n",
+    "    val_loader=val_loader,\n",
+    "    device=device,\n",
+    "    criterion=criterion,\n",
+    "    optimizer=optimizer,\n",
+    "    scheduler=scheduler,\n",
+    "    num_epochs=num_epochs,\n",
+    "    scale_factor=4,\n",
+    "    model_requires_upscale=False,\n",
+    "    best_model_path=best_model_path,\n",
+    "    history_path=history_path,\n",
+    "    use_amp=True  \n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d045cdb8",
+   "id": "20846f2c",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# train_losses, val_losses = [], []\n",
-    "# train_psnrs,  val_psnrs  = [], []\n",
-    "\n",
-    "# best_psnr = 0.0\n",
-    "# best_model_path = CONFIG[\"model\"][\"best_EDSR_path\"]\n",
-    "# os.makedirs(os.path.dirname(best_model_path), exist_ok=True)\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     print(f\"\\nEpoch {epoch+1}/{num_epochs}\")\n",
-    "\n",
-    "    \n",
-    "#     train_loss, train_psnr, scaler = train_sr(\n",
-    "#         model=model,\n",
-    "#         train_loader=train_loader,\n",
-    "#         loss_fn=criterion,\n",
-    "#         optimizer=optimizer,\n",
-    "#         device=device,\n",
-    "#         scale_factor=4,                 \n",
-    "#         model_requires_upscale=False,   \n",
-    "#         scheduler=scheduler\n",
-    "#     )\n",
-    "\n",
-    "#     val_loss, val_psnr = test_sr(\n",
-    "#         model=model,\n",
-    "#         test_loader=val_loader,\n",
-    "#         loss_fn=criterion,\n",
-    "#         device=device,\n",
-    "#         scale_factor=4,\n",
-    "#         model_requires_upscale=False\n",
-    "#     )\n",
-    "\n",
-    "#     if val_psnr > best_psnr:\n",
-    "#         best_psnr = val_psnr\n",
-    "#         torch.save(model.state_dict(), best_model_path)\n",
-    "#         print(f\" New best model saved with Val PSNR = {best_psnr:.2f} dB\")\n",
-    "\n",
-    "#     train_losses.append(train_loss)\n",
-    "#     val_losses.append(val_loss)\n",
-    "#     train_psnrs.append(train_psnr)\n",
-    "#     val_psnrs.append(val_psnr)\n",
-    "\n",
-    "#     print(f\"Train loss: {train_loss:.6f} | Train PSNR: {train_psnr:.2f} dB\")\n",
-    "#     print(f\"Val   loss: {val_loss:.6f} | Val   PSNR: {val_psnr:.2f} dB\")\n",
-    "#     print(f\"  -> LR: {optimizer.param_groups[0]['lr']:.8f}\")\n",
-    "\n",
-    "# plot_sr_progress(train_losses, val_losses, train_psnrs, val_psnrs)\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
