--- a/notebooks/yasser/test_MODELS.ipynb
+++ b/notebooks/yasser/test_MODELS.ipynb
@@ -215,13 +215,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "120efa04",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "# test"
+    "test  =[1,2,3]\n",
+    "print(len(test))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6dc6c398",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
