--- a/notebooks/said/overfit.ipynb
+++ b/notebooks/said/overfit.ipynb
@@ -34,7 +34,7 @@
     "import torchvision.transforms as T\n",
     "import torch.nn.functional as F\n",
     "import matplotlib.pyplot as plt\n",
-    "from src.utils.data_fetcher import create_loaders\n",
+    "from src.utils.data_loader import create_loaders\n",
     "from src.utils.models_architecture import EDSR\n",
     "from src.utils.helper_functions import train_sr, val_sr, plot_sr_progress\n",
     "import os\n",
@@ -52,16 +52,16 @@
    "outputs": [],
    "source": [
     "model = EDSR().to(device)\n",
-    "criterion = nn.L1Loss()\n",
-    "optimizer = torch.optim.Adam(\n",
-    "    model.parameters(),\n",
-    "    lr=1e-4\n",
-    ")\n"
+    "# criterion = nn.L1Loss()\n",
+    "# optimizer = torch.optim.Adam(\n",
+    "#     model.parameters(),\n",
+    "#     lr=1e-4\n",
+    "# )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "60e8ab9e",
    "metadata": {},
    "outputs": [],
@@ -69,8 +69,8 @@
     "from PIL import Image\n",
     "import torchvision.transforms as T\n",
     "\n",
-    "hr_path=\"./data/preprocessed/test/HR/austin1_r07_c09.png\"\n",
-    "lr_path=\"./data/preprocessed/test/LR/austin1_r07_c09.png\"\n",
+    "hr_path=\"data/preprocessed/test/HR/austin5_r00_c00.png\"\n",
+    "lr_path=\"data/preprocessed/test/LR/austin5_r00_c00.png\"\n",
     "\n",
     "lr_img = Image.open(lr_path).convert(\"RGB\")\n",
     "hr_img = Image.open(hr_path).convert(\"RGB\")\n"
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "4613493f",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "b95ddf25",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "9fc6daf4",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([1, 3, 192, 192]) torch.Size([1, 3, 192, 192])\n"
+      "torch.Size([1, 3, 128, 128]) torch.Size([1, 3, 128, 128])\n"
      ]
     }
    ],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "5be3b09e",
    "metadata": {},
    "outputs": [],
