--- a/notebooks/yasser/overfit.ipynb
+++ b/notebooks/yasser/overfit.ipynb
@@ -305,7 +305,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "BDAI2",
+   "display_name": "DL",
    "language": "python",
    "name": "python3"
   },
@@ -319,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.19"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
