--- a/notebooks/adnane/large-adnane.ipynb
+++ b/notebooks/adnane/large-adnane.ipynb
@@ -43,7 +43,7 @@
     "from notebooks.yasser.custom_model import Custom_model     \n",
     "from src.utils.train_model_sr import train_model_sr\n",
     "import json\n",
-    "from src.utils.perceptual_loss import PerceptualLoss\n",
+    "from src.utils.perceptual_loss import PerceptualLoss,CustomLoss\n",
     "\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "print(f\"device : {device}\")\n",
@@ -72,8 +72,13 @@
     ")\n",
     "\n",
     "model_large = Custom_model(n_HF_blocks=8,n_MS_blocks=2,n_LF_blocks=16).to(device)\n",
+    "perceptual_loss = PerceptualLoss(layers=['relu3_3']).to(device)\n",
     "\n",
-    "criterion = nn.L1Loss() + PerceptualLoss()\n",
+    "criterion = CustomLoss(\n",
+    "    perceptual_criterion=perceptual_loss,\n",
+    "    pixel_criterion=nn.L1Loss(),\n",
+    "    factor=0.05   \n",
+    ").to(device)\n",
     "optimizer = optim.Adam(model_large.parameters(), lr=lr, betas=(0.9, 0.999), weight_decay=weight_decay)\n",
     "scheduler = optim.lr_scheduler.MultiStepLR(optimizer, milestones=[15, 30, 45], gamma=0.5)\n",
     "\n",
