--- a/notebooks/adnane/01 - ESRGAN STAGE 1.ipynb
+++ b/notebooks/adnane/01 - ESRGAN STAGE 1.ipynb
@@ -43,13 +43,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a64cd673",
    "metadata": {},
    "outputs": [],
    "source": [
     "def calculate_psnr(sr, hr, data_range=2.0):\n",
     "    \"\"\"\n",
+    "    FUNCTION Used by ESRGAN\n",
     "    Calculates PSNR between SR and HR tensors in [-1, 1] range.\n",
     "    sr, hr: Tensors of shape (B, C, H, W)\n",
     "    \"\"\"\n",
@@ -64,11 +65,9 @@
     "    Standard Kaiming Initialization for ESRGAN components.\n",
     "    \"\"\"\n",
     "    if isinstance(m, nn.Conv2d):\n",
-    "        # Kaiming Normal is standard for LeakyReLU\n",
     "        init.kaiming_normal_(m.weight, a=0.2, mode='fan_in', nonlinearity='leaky_relu')\n",
     "        \n",
-    "        # Scale down the initial weights slightly (as suggested in ESRGAN paper)\n",
-    "        # to help with stability in deep architectures.\n",
+    "        # Scaling down the initial weights slightly as suggested in ESRGAN paper\n",
     "        m.weight.data *= 0.1 \n",
     "        \n",
     "        if m.bias is not None:\n",
@@ -342,56 +341,6 @@
     "        out = self.tail_res(out) + x\n",
     "        out = self.upsample(out)\n",
     "        return out"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0c695291",
-   "metadata": {},
-   "source": [
-    "# DISCRIMINATOR NET"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "7f66dcb9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Discriminator(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super().__init__()\n",
-    "        self.initial = nn.Sequential(\n",
-    "            nn.Conv2d(3, 64, 3, 1, 1),\n",
-    "            nn.LeakyReLU(0.2)\n",
-    "        )\n",
-    "        layers = []\n",
-    "        in_ch = 64\n",
-    "        for _ in range(3):\n",
-    "            layers.append(nn.Sequential(\n",
-    "                nn.Conv2d(in_ch, in_ch, 3, 2, 1),\n",
-    "                nn.BatchNorm2d(in_ch),\n",
-    "                nn.LeakyReLU(0.2),\n",
-    "                nn.Conv2d(in_ch, in_ch*2, 3, 1, 1),\n",
-    "                nn.BatchNorm2d(in_ch*2),\n",
-    "                nn.LeakyReLU(0.2)\n",
-    "            ))\n",
-    "            in_ch *= 2\n",
-    "        self.blocks = nn.Sequential(*layers)\n",
-    "        self.fc = nn.Sequential(\n",
-    "            nn.Flatten(),\n",
-    "            nn.LazyLinear(1024),\n",
-    "            nn.Dropout(0.3),\n",
-    "            nn.LeakyReLU(0.2),\n",
-    "            nn.LazyLinear(1)\n",
-    "        )\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        x = self.initial(x)\n",
-    "        x = self.blocks(x)\n",
-    "        x = self.fc(x)\n",
-    "        return x"
    ]
   },
   {
