--- a/notebooks/yasser/large.ipynb
+++ b/notebooks/yasser/large.ipynb
@@ -384,7 +384,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DL",
+   "display_name": "BDAI2",
    "language": "python",
    "name": "python3"
   },
@@ -398,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
