--- a/notebooks/said/EDSR_PRO.ipynb
+++ b/notebooks/said/EDSR_PRO.ipynb
@@ -2,23 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "fd81851d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "device : cuda\n",
-      "\n",
-      " DATA LOADED:\n",
-      "  Train: 64800 samples\n",
-      "  Val:   8100 samples\n",
-      "  Test:  8100 samples\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -51,7 +38,7 @@
     "\n",
     "# CONFIG FROM YAML \n",
     "data_root      = CONFIG[\"paths\"][\"output_root\"]\n",
-    "batch_size     = 1 #CONFIG[\"training\"][\"batch_size\"]\n",
+    "batch_size     = 16 #CONFIG[\"training\"][\"batch_size\"]\n",
     "num_workers    = CONFIG[\"training\"][\"num_workers\"]\n",
     "use_aug        = CONFIG[\"training\"].get(\"use_augmentation\", True)\n",
     "\n",
@@ -75,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "fd67b5cf",
    "metadata": {},
    "outputs": [],
@@ -147,32 +134,14 @@
    "execution_count": null,
    "id": "cf0ca4ce",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Training EDSR_PRO from scratch\n",
-      "No previous training history found.\n",
-      "\n",
-      " [EDSR_PRO] Epoch 1/1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Training:   1%|          | 361/64800 [00:50<2:28:42,  7.22it/s, loss=0.0342, psnr=25.4] "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = EDSRPro().to(device)\n",
-    "\n",
     "criterion = nn.L1Loss()\n",
     "optimizer = optim.Adam(model.parameters(), lr=lr, weight_decay=weight_decay)\n",
     "scheduler = optim.lr_scheduler.StepLR(optimizer, step_size=step_size, gamma=gamma)\n",
     "best_model_path = CONFIG[\"model\"][\"best_EDSR_PRO_path\"]\n",
+    "last_model_path = CONFIG[\"model\"][\"last_EDSR_PRO_path\"]\n",
     "history_path = CONFIG[\"history\"][\"EDSR_PRO_history_path\"]\n",
     "\n",
     "train_model_sr(\n",
@@ -188,8 +157,10 @@
     "    scale_factor=4,\n",
     "    model_requires_upscale=False,\n",
     "    best_model_path=best_model_path,\n",
+    "    last_model_path=last_model_path,\n",
     "    history_path=history_path,\n",
-    "    use_amp=True  \n",
+    "    use_amp=True,\n",
+    "    mode=\"scratch\"\n",
     ")"
    ]
   },
