--- a/notebooks/said/SRCNN.ipynb
+++ b/notebooks/said/SRCNN.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "device : cuda\n",
+      "device : cpu\n",
       "\n",
       " DATA LOADED:\n",
       "  Train: 152352 samples\n",
@@ -51,7 +51,7 @@
     "# HYPERPARAMS FROM CONFIG \n",
     "lr              = CONFIG[\"training\"][\"lr\"]\n",
     "weight_decay    = CONFIG[\"training\"][\"weight_decay\"]\n",
-    "num_epochs      = 4 #CONFIG[\"training\"][\"epochs\"]\n",
+    "num_epochs      = 0 #CONFIG[\"training\"][\"epochs\"]\n",
     "step_size       = CONFIG[\"training\"][\"scheduler_step_size\"]\n",
     "gamma           = CONFIG[\"training\"][\"scheduler_gamma\"]\n",
     "\n",
@@ -87,10 +87,8 @@
      "output_type": "stream",
      "text": [
       "Loading LAST checkpoint: src/models/checkpoints/SRCNN/last_srcnn.pth\n",
-      " Resume from epoch 96 | Best PSNR = 27.19\n",
-      " Loading training history...\n",
-      "\n",
-      " [SRCNN] Epoch 97/100\n"
+      " Resume from epoch 100 | Best PSNR = 27.19\n",
+      " Loading training history...\n"
      ]
     },
     {
@@ -98,72 +96,7 @@
      "output_type": "stream",
      "text": [
       "/home/jadli/Bureau/BDAI2/Satellite_Super_Resulotion0/src/utils/train_model_sr.py:48: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  checkpoint = torch.load(checkpoint_path, map_location=device)\n",
-      "                                                                                       \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train loss: 0.003020 | Train PSNR: 25.23 dB\n",
-      "Val   loss: 0.002308 | Val   PSNR: 27.18 dB\n",
-      "-> LR: 0.00001250\n",
-      "\n",
-      " [SRCNN] Epoch 98/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                       \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train loss: 0.003020 | Train PSNR: 25.23 dB\n",
-      "Val   loss: 0.002303 | Val   PSNR: 27.18 dB\n",
-      "-> LR: 0.00001250\n",
-      "\n",
-      " [SRCNN] Epoch 99/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                       \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " New BEST model saved at epoch 99 with PSNR = 27.19\n",
-      "Train loss: 0.003020 | Train PSNR: 25.23 dB\n",
-      "Val   loss: 0.002299 | Val   PSNR: 27.19 dB\n",
-      "-> LR: 0.00001250\n",
-      "\n",
-      " [SRCNN] Epoch 100/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                       \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train loss: 0.003020 | Train PSNR: 25.23 dB\n",
-      "Val   loss: 0.002299 | Val   PSNR: 27.19 dB\n",
-      "-> LR: 0.00001250\n"
+      "  checkpoint = torch.load(checkpoint_path, map_location=device)\n"
      ]
     },
     {
