--- a/notebooks/adnane/02 - ESRGAN STAGE 2.ipynb
+++ b/notebooks/adnane/02 - ESRGAN STAGE 2.ipynb
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "035922d3",
    "metadata": {},
    "outputs": [
@@ -578,7 +578,34 @@
     "\n",
     "        loss_G = (\n",
     "            LAMBDA_ADV * loss_G_adv +\n",
-    "            LAMBDA_VGG * loss_VGG +\n",
+    "            LAMBDA_VGG * loss_VGG +        # SAVE BEST MODEL\n",
+    "        if val_psnr > best_psnr:\n",
+    "            best_psnr = val_psnr\n",
+    "            checkpoint = {\n",
+    "                \"model\": model.state_dict(),\n",
+    "                \"optimizer\": optimizer.state_dict(),\n",
+    "                \"epoch\": epoch,\n",
+    "                \"best_psnr\": best_psnr\n",
+    "            }\n",
+    "            if scheduler is not None:\n",
+    "                checkpoint[\"scheduler\"] = scheduler.state_dict()\n",
+    "\n",
+    "            torch.save(checkpoint, best_model_path)\n",
+    "\n",
+    "            print(f\" New BEST model saved at epoch {epoch+1} with PSNR = {best_psnr:.2f}\")\n",
+    "        \n",
+    "        last_checkpoint = {\n",
+    "            \"model\": model.state_dict(),\n",
+    "            \"optimizer\": optimizer.state_dict(),\n",
+    "            \"epoch\": epoch,\n",
+    "            \"best_psnr\": best_psnr\n",
+    "        }\n",
+    "\n",
+    "        if scheduler is not None:\n",
+    "            last_checkpoint[\"scheduler\"] = scheduler.state_dict()\n",
+    "\n",
+    "        torch.save(last_checkpoint, last_model_path)\n",
+    "\n",
     "            LAMBDA_PIXEL * loss_pixel\n",
     "        )\n",
     "\n",
